--- a/src/pages/mypage/Mypage.module.scss
+++ b/src/pages/mypage/Mypage.module.scss
@@ -151,6 +151,159 @@
   }
 }
 
+.info_wrap {
+  margin-top: 40px;
+  .user_info_wrap {
+    background-color: #fff;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    .sub_nav {
+      display: flex;
+      flex-direction: row;
+      gap: 26px;
+      & > div {
+        color: #888;
+        cursor: pointer;
+      }
+      .current {
+        border-bottom: 1px solid #aaa;
+      }
+    }
+    .content {
+      .basic_info,
+      .password {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        .item {
+          display: flex;
+          flex-direction: column;
+          gap: 4px;
+          & > label {
+            color: #444;
+          }
+          input {
+            max-width: 340px;
+            padding: 14px 16px;
+            height: unset;
+          }
+          input::placeholder {
+            color: #aaa;
+          }
+          input:disabled {
+            color: #aaa;
+          }
+          & > div {
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+            .checkmsg {
+              margin-top: 6px;
+              margin-left: 6px;
+              color: #ff4444;
+            }
+          }
+          .social_ico {
+            display: flex;
+            flex-direction: row;
+            gap: 4px;
+            flex-grow: unset;
+            & > img {
+              width: 28px;
+              height: 28px;
+              border: 1px solid #aaa;
+              border-radius: 5px;
+            }
+          }
+        }
+      }
+    }
+    .btn {
+      display: flex;
+      justify-content: flex-end;
+      & > button {
+        height: 48px;
+        padding: 0 32px;
+        color: #fafafa;
+        background-color: #6269f5;
+        border-radius: 3px;
+      }
+    }
+  }
+  .total_career {
+    margin-top: 40px;
+    background-color: #fff;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    position: relative;
+    .title {
+      & > span {
+        color: #888;
+        margin-right: 8px;
+      }
+      & > img {
+        cursor: pointer;
+      }
+      .tooltip {
+        position: absolute;
+        border: 1px solid #aaa;
+        border-radius: 5px;
+        background-color: #fafafa;
+        padding: 4px 8px;
+        color: #888;
+        left: 80px;
+        bottom: 50px;
+      }
+    }
+    .career {
+      display: flex;
+      flex-direction: row;
+      align-items: baseline;
+      & > h4 {
+        margin-left: 8px;
+        margin-right: 4px;
+      }
+    }
+  }
+  .career_list {
+    margin-top: 40px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    .career_detail {
+      min-width: 295px;
+      height: 292px;
+      flex-grow: 1;
+      border: 1px solid #aaa;
+      border-radius: 5px;
+      background: url(@/assets/images/img_blue8.png) no-repeat, #eeefff;
+      background-position: right;
+      padding: 20px;
+      .item {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+        label {
+          color: #888;
+        }
+        input {
+          padding: 13px 20px;
+        }
+      }
+    }
+  }
+}
+
 /* main end */
 /* mobile-end */
 
@@ -226,6 +379,50 @@
       min-width: calc(50% - 10px);
     }
   }
+  .info_wrap {
+    .user_info_wrap {
+      .sub_nav {
+        gap: 56px;
+      }
+      .content {
+        .basic_info,
+        .password {
+          .item {
+            flex-direction: row;
+            gap: 20px;
+            & > label {
+              min-width: 100px;
+              line-height: 55px;
+              margin-bottom: 0;
+            }
+            .social_ico {
+              align-items: center;
+            }
+          }
+        }
+        .password {
+          .item {
+            & > label {
+              min-width: 120px;
+            }
+          }
+        }
+      }
+      .btn {
+        & > button {
+          height: 60px;
+        }
+      }
+    }
+    .total_career {
+      padding: 40px;
+      .title {
+        .tooltip {
+          bottom: 70px;
+        }
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -253,6 +450,11 @@
     .community_wrap {
       flex-direction: column;
     }
+  }
+  .info_wrap {
+    margin-top: 0px;
+    min-width: 0;
+    flex-grow: 1;
   }
 }
 
