--- a/src/components/comments/Comments.module.scss
+++ b/src/components/comments/Comments.module.scss
@@ -12,7 +12,7 @@
       height: 28px;
     }
     & > div > div {
-      padding: 17px 16px;
+      padding: 14px 16px;
       min-height: 48px;
     }
     & > button {
@@ -161,6 +161,10 @@
             height: 28px;
             margin: 0px 10px;
           }
+          & > div > div {
+            padding: 14px 16px;
+            min-height: 48px;
+          }
           & > button {
             min-height: 48px;
             border: 1px solid #aaa;
@@ -191,11 +195,11 @@
       flex-direction: row;
       align-items: center;
       & > div > div {
-        min-height: 60px;
+        min-height: 54px;
       }
       & > button {
         min-width: 110px;
-        min-height: 60px;
+        min-height: 54px;
         align-self: stretch;
       }
     }
@@ -214,9 +218,12 @@
           .form {
             flex-direction: row;
             align-items: center;
+            & > div > div {
+              min-height: 54px;
+            }
             & > button {
               min-width: 110px;
-              min-height: 60px;
+              min-height: 54px;
               align-self: stretch;
             }
           }
