--- a/src/pages/community/Search.module.scss
+++ b/src/pages/community/Search.module.scss
@@ -182,7 +182,7 @@
           gap: 10px;
           & > span {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             & > img {
               margin-right: 4px;
             }
@@ -259,7 +259,7 @@
               gap: 10px;
               & > span {
                 display: flex;
-                align-items: center;
+                align-items: flex-start;
                 & > img {
                   margin-right: 4px;
                 }
@@ -312,16 +312,16 @@
         justify-content: center;
         & > input {
           margin: 0;
-          height: 60px;
+          height: 54px;
         }
         & > div {
           .btn_to_write {
             width: 152px;
-            height: 60px;
+            height: 54px;
           }
           .btn_search {
             width: 111px;
-            height: 60px;
+            height: 54px;
           }
         }
       }
