--- a/src/pages/review/Search.module.scss
+++ b/src/pages/review/Search.module.scss
@@ -48,7 +48,7 @@
             color: #aaa;
           }
           .value {
-            height: 60px;
+            height: 48px;
             width: 100%;
             margin-top: 8px;
           }
@@ -125,8 +125,8 @@
         gap: 20px;
         justify-content: flex-end;
         & > button {
-          height: 60px;
-          padding: 19px 40px;
+          height: 48px;
+          padding: 0 40px;
           color: #fafafa;
           border-radius: 3px;
         }
@@ -262,6 +262,11 @@
         border-radius: 5px;
         padding: 40px;
         .contents {
+          .item {
+            .value {
+              height: 54px;
+            }
+          }
           .region_corp {
             flex-direction: row;
             & > div:nth-of-type(1) {
@@ -278,6 +283,11 @@
               width: 24px;
               height: 24px;
             }
+          }
+        }
+        .buttons {
+          & > button {
+            height: 54px;
           }
         }
       }
