update: user point

--- a/src/pages/mypage/Mypage.module.scss
+++ b/src/pages/mypage/Mypage.module.scss
@@ -54,6 +54,11 @@
         }
         .gauge {
           margin-top: 20px;
+          .values {
+            & > span:hover {
+              color: #222;
+            }
+          }
           .range {
             display: flex;
             flex-direction: row;
