--- a/src/pages/signup/Signup.module.scss
+++ b/src/pages/signup/Signup.module.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 
 .signup_wrap {
   width: 100%;
@@ -98,7 +98,6 @@
       }
       .btn_signup button {
         width: 100%;
-        padding: 19px 28px;
         line-height: 24px;
         text-align: center;
         margin-top: 40px;
