--- a/src/pages/common/Home.module.scss
+++ b/src/pages/common/Home.module.scss
@@ -124,7 +124,93 @@
       }
     }
     .review_wrap {
-      margin-top: 80px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 60px 20px;
+      .reviews {
+        flex-grow: 1;
+        min-width: 295px;
+        .body_wrap {
+          & > ul {
+            .item {
+              margin-top: 20px;
+              .type {
+                width: fit-content;
+                padding: 2px 8px;
+                border: 1px solid #aaa;
+                border-radius: 5px;
+                color: #aaa;
+                height: 26px;
+              }
+              .content {
+                margin-top: 8px;
+                display: flex;
+                flex-direction: column;
+                gap: 2px;
+                overflow: hidden;
+                cursor: pointer;
+                .highlight {
+                  text-wrap: nowrap;
+                  overflow: hidden;
+                  text-overflow: ellipsis;
+                }
+                .info {
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+                  flex-wrap: nowrap;
+                  overflow: hidden;
+                  gap: 10px;
+                  .corp_name {
+                    color: #888;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                  }
+                  .score {
+                    color: #888;
+                    display: flex;
+                    gap: 2px;
+                    align-items: center;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      .hot_corp_wrap {
+        min-width: 295px;
+        max-width: 305px;
+        flex-grow: 1;
+        .header {
+          justify-content: space-between;
+        }
+        & > ul {
+          margin-top: 20px;
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          .item {
+            border: 1px solid #aaa;
+            border-radius: 5px;
+            padding: 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+            .description {
+              width: fit-content;
+              border: #6269f5 solid 1px;
+              border-radius: 5px;
+              background-color: #eeefff;
+              color: #6269f5;
+              height: 24px;
+              padding: 0 8px;
+            }
+          }
+        }
+      }
     }
   }
 }
@@ -180,8 +266,30 @@
                     margin-left: unset;
                   }
                 }
-                .reaction {
+              }
+            }
+          }
+        }
+      }
+      .review_wrap {
+        flex-wrap: nowrap;
+        .reviews {
+          .body_wrap {
+            & > ul {
+              .item {
+                .type {
+                  flex-shrink: 0;
+                  height: 29px;
                 }
+              }
+            }
+          }
+        }
+        .hot_corp_wrap {
+          & > ul {
+            .item {
+              .description {
+                height: 26px;
               }
             }
           }
@@ -214,6 +322,33 @@
                 }
                 .reaction {
                   width: 183px;
+                }
+              }
+            }
+          }
+        }
+      }
+      .review_wrap {
+        .reviews {
+          .body_wrap {
+            & > ul {
+              .item {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                gap: 10px;
+                .content {
+                  flex-grow: 1;
+                  flex-direction: row;
+                  gap: 20px;
+                  margin-top: 0;
+                  .highlight {
+                    flex-grow: 1;
+                  }
+                  .info {
+                    width: 275px;
+                    flex-shrink: 0;
+                  }
                 }
               }
             }
