feat: users page

--- a/src/pages/mypage/Mypage.module.scss
+++ b/src/pages/mypage/Mypage.module.scss
@@ -701,7 +701,7 @@
             .nickname {
               display: none;
             }
-            .level_imamge {
+            .level_image {
               width: 38px;
               height: 38px;
               margin-bottom: 4px;
