update link to users

--- a/src/pages/community/Community.module.scss
+++ b/src/pages/community/Community.module.scss
@@ -49,6 +49,7 @@
         }
         .nickname {
           max-width: 50%;
+          cursor: pointer;
           & > span {
             white-space: nowrap;
             overflow: hidden;
