--- a/src/style-reset.scss
+++ b/src/style-reset.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url("https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css");
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
 /* font-family: 
 'NanumSquareLight';
 'NanumSquare';
@@ -20,6 +21,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  font-family: "Pretendard-Regular", sans-serif;
 }
 html {
   color: #333333;
@@ -110,7 +112,7 @@ button,
 textarea {
   //default
   color: #222;
-  font-family: "Pretendard-Regular";
+  font-family: "Pretendard-Regular", sans-serif;
   // src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-size: 1.6rem;
   font-style: normal;
