--- a/src/components/elements/Element.module.scss
+++ b/src/components/elements/Element.module.scss
@@ -11,7 +11,8 @@
   &:read-only {
     color: #aaa;
     background-color: #efefef;
-    border: 1px solid #aaa;
+    // border: 1px solid #aaa;
+    border: 1px solid #6269f5;
     cursor: unset;
   }
 }
