--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -284,6 +284,9 @@ header {
         width: unset;
         display: inline-block !important;
       }
+      .signup {
+        width: unset;
+      }
       & > a:first-child {
         margin-right: 20px;
       }
