--- a/src/pages/common/Home.module.scss
+++ b/src/pages/common/Home.module.scss
@@ -222,7 +222,8 @@
               background-color: #eeefff;
               color: #6269f5;
               height: 24px;
-              padding: 0 8px;
+              padding: 2px 8px;
+              margin-top: 4px;
             }
           }
         }
